add darkmode, language options and layout position adjustments

--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
-        <!-- <link href="https://fonts.googleapis.com/css2?family=Handlee&family=Rubik:wght@300;400;500;700&display=swap" rel="stylesheet"> -->
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
         <link rel="icon" type="image/png" sizes="128x128" href="icons/favicon-128x128.png">
         <link rel="icon" type="image/png" sizes="96x96" href="icons/favicon-96x96.png">
